tests/valid/shadowing/shadow_linear_param_after_drop_ok.facet
fn f(x: linear isize) -> unrestricted isize {
    (drop x);
    let x: unrestricted isize = 42;
    x
}
