tests/invalid/shadowing_error/shadow_linear_param_shadow_inner_not_consumed.facet
fn f(x: linear isize) -> unrestricted isize {
    (drop x);
    let x: linear isize = 42;
    0
}
